--- a/energy-audit/package.json
+++ b/energy-audit/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
-    "sass": "^1.96.0"
+    "sass": "^1.96.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
